--- a/pokedex.html
+++ b/pokedex.html
@@ -45,7 +45,7 @@
         </div>
 
 
-        <div id="pokemon-list" class="pokemon-list"></div>
+        <div id="pokemon-list" class="pokemon-list"><button id="carregarPoke" class="load-more-button" onclick="loadMorePokemon()">Carregar mais pokémon</button></div>
         
         
 
